[project]
name = "pykasi"
version = "0.1.0"
description = "PyKasi — esoteric teaching language with Bekasi slang"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "ply>=3.11"
]

[project.scripts]
pykasi = "pykasi.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
